# vecdb-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  config.toml
.github/workflows/: rust.yml
src/: filter.rs  main.rs  merror.rs  persistence.rs  scalar.rs  util.rs  vecdb.rs
src/filter/: index.rs  mod.rs
src/hybrid/: mod.rs  scalar.rs
src/index/: flat.rs  hnsw.rs  merror.rs  mod.rs  option.rs
