[package]
name = "vecdb-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
thiserror = "2.0.11"
faiss = { version = "0.12.1", features = ["static"] }
ndarray = "0.16.1"
hnsw_rs = "0.3.1"
anndists = "0.1.2"
rocksdb = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
