[package]
name = "vecdb-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
thiserror = "2.0.11"
faiss = { features = ["static"], path = "faiss-rs" }
ndarray-rand = "0.15"
ndarray = "0.16.1"
hnsw_rs = "0.3.1"
anndists = "0.1.2"
rocksdb = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
lazy_static = "1.4"
roaring = "0.10"
async-trait = "0.1.88"
tokio = { version = "1.34", features = ["full"] }
axum = { version = "0.8.4", features = ["json"] }
axum-extra = "0.10.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3.19"
tower = { version = "0.5.2", features = ["full"] }
hyper = "1.6"

[dependencies.faiss-sys]
version = "0.6.3-alpha.0"
path = "faiss-rs/faiss-sys"
